removed some invalid code

--- a/single-architecture-spring-boot-shopping-sample/src/main/resources/templates/index.html
+++ b/single-architecture-spring-boot-shopping-sample/src/main/resources/templates/index.html
@@ -2,15 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Home Page</title>
 </head>
 <body>
-      Hello World!
-      <p>
-          <a href="/swagger-ui.html">Read Restful API</a>
-      </p>
-      <p>
-          <a href="/h2-console">H2 DB Console</a>
-      </p>
+
+      <div align="center">
+          <p>
+              <a href="/swagger-ui.html">Read Restful API</a>
+          </p>
+          <p>
+              <a href="/h2-console">Enter H2 DB Console</a>
+          </p>
+      </div>
 </body>
 </html>
