--- a/microservice-spring-cloud-shopping-sample/customer-service/src/main/resources/templates/index.html
+++ b/microservice-spring-cloud-shopping-sample/customer-service/src/main/resources/templates/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
 
-     <h1>Hello World,Customer Service! </h1>
+<div align="center">
+    <h1>Hello World,Customer Service! </h1>
+    <h2><a href="/customer-service/swagger-ui.html">Read Customer Service Restful API</a> </h2>
+</div>
+
 </body>
 </html>
