--- a/microservice-spring-cloud-shopping-sample/spring-cloud-netflix-zuul-api-gateway/src/main/resources/templates/index.html
+++ b/microservice-spring-cloud-shopping-sample/spring-cloud-netflix-zuul-api-gateway/src/main/resources/templates/index.html
@@ -10,13 +10,13 @@
 
     <table >
         <tr>
-            <td><a href="/book-service/">/book-service/</a></td>
+            <td><a href="/netflix-zuul-api-gateway/book-service/">/book-service/</a></td>
         </tr>
         <tr>
-            <td><a href="/book-service/available/">/book-service/available/</a></td>
+            <td><a href="/netflix-zuul-api-gateway/book-service/available/">/book-service/available/</a></td>
         </tr>
         <tr>
-            <td><a href="/book-service/checked-out/">/book-service/checked-out/</a></td>
+            <td><a href="/netflix-zuul-api-gateway/book-service/checked-out/">/book-service/checked-out/</a></td>
         </tr>
     </table>
 
