added spring cloud netflix zuul api gateway code

--- a/microservice-spring-cloud-shopping-sample/spring-cloud-netflix-zuul-api-gateway/src/main/resources/templates/index.html
+++ b/microservice-spring-cloud-shopping-sample/spring-cloud-netflix-zuul-api-gateway/src/main/resources/templates/index.html
@@ -10,6 +10,11 @@
 
     <table >
         <tr>
+            <td>
+                <a href="/netflix-zuul-api-gateway/hystrix.stream/">/netflix-zuul-api-gateway/hystrix.stream/</a></td>
+            </td>
+        </tr>
+        <tr>
             <td><a href="/netflix-zuul-api-gateway/book-service/">/book-service/</a></td>
         </tr>
         <tr>
